<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showNormalNotification"
            android:text="@string/show_normal_notification"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showBigTextNotification"
            android:text="@string/show_big_text_style_notification"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showBigPictureNotification"
            android:text="@string/show_big_picture_style_notification"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showInboxNotification"
            android:text="@string/show_inbox_style_notification"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showMediaNotification"
            android:text="@string/show_media_style_notification"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showMessagingNotification"
            android:text="@string/show_message_style_notification"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showCustomStyleNotification"
            android:text="@string/show_custom_style_notification"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showReplyStyleNotification"
            android:text="@string/show_reply_notification"
            android:textAllCaps="false" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showHeadUpNotification"
            android:text="@string/show_head_up_notification"
            android:textAllCaps="false" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showProgressNotification"
            android:text="@string/show_normal_notification"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>
</LinearLayout>
